fix style of banner in user settings on mobile

--- a/css/forms.less
+++ b/css/forms.less
@@ -160,7 +160,9 @@
 
   .banner {
     display: block;
-    width: 100%;
+    .non-mobile({
+      width: 100%;
+    });
     .fluid-height(38.2%);
     background-size: cover;
     background-position: center;
